--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
     "babel-loader": "^8.1.0",
@@ -26,7 +28,10 @@
     "html-webpack-plugin": "^4.3.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
+    "ts-loader": "^7.0.2",
+    "typescript": "^3.8.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
