build(react-redux): add react-redux and test examples

--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.8",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   }
 }
