--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/react-redux": "^7.1.8",
+    "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
