--- a/package.json
+++ b/package.json
@@ -1,71 +1,58 @@
 {
-    "name": "react-boilerplate",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "cross-env TS_NODE_FILES=true mocha --recursive --r @babel/register --r ts-node/register --r ./src/test/setup.ts --r ignore-styles './src/test/*.{ts,tsx}'",
-        "start": "webpack-dev-server --mode development --open --hot",
-        "build": "webpack --mode production",
-        "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook"
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@babel/core": "^7.9.6",
-        "@babel/preset-env": "^7.9.6",
-        "@babel/preset-react": "^7.9.4",
-        "@babel/preset-typescript": "^7.9.0",
-        "@babel/register": "^7.9.0",
-        "@storybook/addon-actions": "^5.3.18",
-        "@storybook/addon-info": "^5.3.18",
-        "@storybook/addon-links": "^5.3.18",
-        "@storybook/addons": "^5.3.18",
-        "@storybook/react": "^5.3.18",
-        "@types/classnames": "^2.2.10",
-        "@types/jest": "^25.2.2",
-        "@types/jsdom": "^16.2.3",
-        "@types/react-redux": "^7.1.8",
-        "@types/react-test-renderer": "^16.9.2",
-        "@types/mocha": "^7.0.2",
-        "@types/chai": "^4.2.11",
-        "@types/react": "^16.9.34",
-        "@types/react-dom": "^16.9.7",
-        "@typescript-eslint/eslint-plugin": "^2.31.0",
-        "@typescript-eslint/parser": "^2.31.0",
-        "babel-loader": "^8.1.0",
-        "chai": "^4.2.0",
-        "css-loader": "^3.5.3",
-        "eslint": "^6.8.0",
-        "eslint-config-airbnb": "^18.1.0",
-        "eslint-plugin-import": "^2.20.1",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-react": "^7.19.0",
-        "eslint-plugin-react-hooks": "^2.5.0",
-        "html-webpack-plugin": "^4.3.0",
-        "ignore-styles": "^5.0.1",
-        "jsdom": "^16.2.2",
-        "mocha": "^7.1.2",
-        "react-test-renderer": "^16.13.1",
-        "sass": "^1.26.5",
-        "sass-loader": "^8.0.2",
-        "source-map-loader": "^0.2.4",
-        "style-loader": "^1.2.1",
-        "ts-loader": "^7.0.2",
-        "ts-node": "^8.10.1",
-        "typescript": "^3.8.3",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3"
-    },
-    "dependencies": {
-        "classnames": "^2.2.6",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-redux": "^7.2.0",
-        "redux": "^4.0.5",
-        "redux-devtools-extension": "^2.13.8",
-        "redux-saga": "^1.1.3"
-    }
+  "name": "react-boilerplate",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-info": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
+    "@storybook/react": "^5.3.18",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.3",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "html-webpack-plugin": "^4.3.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^7.0.2",
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "@types/classnames": "^2.2.10",
+    "@types/react-redux": "^7.1.8",
+    "classnames": "^2.2.6",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3"
+  }
 }
