build(tests): add smart and dumb components tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
     "compilerOptions": {
+        "allowJs": true,
+        "allowSyntheticDefaultImports": true,
+        "checkJs": true,
+        "esModuleInterop": true,
         "jsx": "react",
         "module": "commonjs",
         "noImplicitAny": true,
