--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
     "env": {
         "browser": true,
         "es6": true,
+        "jest": true,
         "node": true
     },
     "extends": ["airbnb", "airbnb/hooks", "plugin:@typescript-eslint/recommended"],
