--- a/package.json
+++ b/package.json
@@ -71,12 +71,14 @@
         "webpack-dev-server": "^3.10.3"
     },
     "dependencies": {
+        "@types/react-toggle": "^4.0.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-test-renderer": "^16.13.1",
+        "react-toggle": "^4.1.1",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
         "redux-saga": "^1.1.3",
