--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-dist
-node_modules
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/dist
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
