--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
         "redux-devtools-extension": "^2.13.8",
         "redux-saga": "^1.1.3",
         "reselect": "^4.0.0",
-        "strip-ansi": "^6.0.0"
+        "strip-ansi": "^6.0.0",
+        "typesafe-actions": "^5.1.0"
     }
 }
