--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build-storybook": "build-storybook",
         "eslint": "eslint --cache --ext .js,.jsx,.ts,.tsx src",
         "eslint:dump": "eslint --print-config ./.eslintrc.json",
-        "start": "webpack-dev-server --mode development --open --hot",
+        "start": "concurrently \"node backend/server\" \"webpack-dev-server --mode development --open --hot\"",
         "storybook": "start-storybook -p 6006",
         "test": "cross-env TS_NODE_FILES=true jest"
     },
@@ -74,7 +74,11 @@
         "webpack-dev-server": "^3.10.3"
     },
     "dependencies": {
+        "@types/bluebird-global": "^3.5.12",
         "@types/react-transition-group": "^4.4.0",
+        "concurrently": "^5.2.0",
+        "express": "^4.17.1",
+        "mysql2": "^2.1.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-dropdown": "^1.7.0",
@@ -89,6 +93,7 @@
         "redux-devtools-extension": "^2.13.8",
         "redux-saga": "^1.1.3",
         "reselect": "^4.0.0",
+        "sequelize": "^6.3.3",
         "strip-ansi": "^6.0.0",
         "typesafe-actions": "^5.1.0"
     }
