feat(main): add Stepper

--- a/package.json
+++ b/package.json
@@ -76,10 +76,11 @@
     "dependencies": {
         "@types/bluebird-global": "^3.5.12",
         "@types/react-transition-group": "^4.4.0",
+        "axios": "^0.19.2",
         "concurrently": "^5.2.0",
         "express": "^4.17.1",
         "mysql2": "^2.1.0",
-        "axios": "^0.19.2",
+        "rc-steps": "^4.1.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-dropdown": "^1.7.0",
