--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "@babel/preset-env": "^7.9.6",
         "@babel/preset-react": "^7.9.4",
         "@babel/preset-typescript": "^7.9.0",
-        "@storybook/addon-actions": "^5.3.18",
+        "@storybook/addon-actions": "^5.3.19",
+        "@storybook/addon-console": "^1.2.1",
         "@storybook/addon-info": "^5.3.18",
         "@storybook/addon-links": "^5.3.18",
         "@storybook/addons": "^5.3.18",
@@ -76,10 +77,11 @@
     "dependencies": {
         "@types/bluebird-global": "^3.5.12",
         "@types/react-transition-group": "^4.4.0",
+        "axios": "^0.19.2",
         "concurrently": "^5.2.0",
         "express": "^4.17.1",
         "mysql2": "^2.1.0",
-        "axios": "^0.19.2",
+        "rc-steps": "^4.1.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-dropdown": "^1.7.0",
