--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "@babel/preset-env": "^7.9.6",
         "@babel/preset-react": "^7.9.4",
         "@babel/preset-typescript": "^7.9.0",
-        "@storybook/addon-actions": "^5.3.18",
+        "@storybook/addon-actions": "^5.3.19",
+        "@storybook/addon-console": "^1.2.1",
         "@storybook/addon-info": "^5.3.18",
         "@storybook/addon-links": "^5.3.18",
         "@storybook/addons": "^5.3.18",
