--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build-storybook": "build-storybook",
         "eslint": "eslint --cache --ext .js,.jsx,.ts,.tsx src",
         "eslint:dump": "eslint --print-config ./.eslintrc.json",
-        "start": "concurrently \"node backend/server\" \"webpack-dev-server --mode development --open --hot\"",
+        "start": "webpack-dev-server --mode development --open --hot",
         "storybook": "start-storybook -p 6006",
         "test": "cross-env TS_NODE_FILES=true jest"
     },
@@ -41,6 +41,7 @@
         "@types/react-router-dom": "^5.1.5",
         "@types/react-test-renderer": "^16.9.2",
         "@types/react-toggle": "^4.0.2",
+        "@types/react-transition-group": "^4.4.0",
         "@types/redux-mock-store": "^1.0.2",
         "@typescript-eslint/eslint-plugin": "^2.31.0",
         "@typescript-eslint/parser": "^2.31.0",
@@ -75,12 +76,8 @@
         "webpack-dev-server": "^3.10.3"
     },
     "dependencies": {
-        "@types/bluebird-global": "^3.5.12",
-        "@types/react-transition-group": "^4.4.0",
         "axios": "^0.19.2",
-        "concurrently": "^5.2.0",
         "express": "^4.17.1",
-        "mysql2": "^2.1.0",
         "rc-steps": "^4.1.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
@@ -96,8 +93,6 @@
         "redux-devtools-extension": "^2.13.8",
         "redux-saga": "^1.1.3",
         "reselect": "^4.0.0",
-        "sequelize": "^6.3.3",
-        "strip-ansi": "^6.0.0",
         "typesafe-actions": "^5.1.0"
     }
 }
