--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "build-client": "webpack --config webpack.client.js --mode=development --watch",
         "build-server": "webpack --config webpack.server.js --mode=development --watch",
         "dev": "npm-run-all --parallel build-client build-server",
-        "eslint": "eslint --cache --ext .js,.jsx,.ts,.tsx src",
-        "server": "nodemon build/server/bundle.js",
+        "eslint": "eslint --cache --ext .js, .jsx, .ts, .tsx src",
+        "server": "nodemon build/server.js",
         "storybook": "start-storybook -p 6006",
         "test": "cross-env TS_NODE_FILES=true jest"
     },
