--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build-storybook": "build-storybook",
         "build-client": "webpack --config webpack.client.js --mode=development --watch",
         "build-server": "webpack --config webpack.server.js --mode=development --watch",
-        "dev": "npm-run-all --parallel build-client build-server",
+        "dev": "rimraf ./build & npm-run-all --parallel build-client build-server",
         "eslint": "eslint --cache --ext .js, .jsx, .ts, .tsx src",
         "server": "nodemon build/server.js",
         "storybook": "start-storybook -p 6006",
@@ -65,6 +65,7 @@
         "jest-transform-stub": "^2.0.0",
         "mini-css-extract-plugin": "^0.12.0",
         "nodemon": "^2.0.4",
+        "npm-run-all": "^4.1.5",
         "pre-commit": "^1.2.2",
         "redux-mock-store": "^1.5.4",
         "sass": "^1.26.5",
@@ -98,6 +99,7 @@
         "redux-devtools-extension": "^2.13.8",
         "redux-saga": "^1.1.3",
         "reselect": "^4.0.0",
+        "rimraf": "^3.0.2",
         "typesafe-actions": "^5.1.0"
     }
 }
