--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
         "webpack-node-externals": "^2.5.2"
     },
     "dependencies": {
+        "@material-ui/core": "^4.11.0",
         "axios": "^0.19.2",
         "css-modules-require-hook": "^4.2.3",
         "ejs": "^3.1.5",
