upd(header): add material-ui panel and integrate new localization

--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
         "@storybook/addons": "^5.3.18",
         "@storybook/react": "^5.3.18",
         "@svgr/webpack": "^5.4.0",
-        "@tippyjs/react": "^4.0.2",
         "@types/classnames": "^2.2.10",
         "@types/enzyme": "^3.10.5",
         "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -81,11 +80,11 @@
     },
     "dependencies": {
         "@material-ui/core": "^4.11.0",
+        "@material-ui/icons": "^4.9.1",
         "axios": "^0.19.2",
         "css-modules-require-hook": "^4.2.3",
         "ejs": "^3.1.5",
         "express": "^4.17.1",
-        "rc-steps": "^4.1.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-dropdown": "^1.7.0",
