--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "build-storybook": "build-storybook",
         "build-client": "webpack --config webpack.client.js --mode=development --watch",
         "build-server": "webpack --config webpack.server.js --mode=development --watch",
-        "dev": "rimraf ./build & npm-run-all --parallel build-client build-server",
+        "dev": "npm-run-all --parallel build-client build-server",
+        "prebuild": "rimraf ./build ",
         "eslint": "eslint --cache --ext .js,.jsx,.ts,.tsx src",
         "server": "nodemon build/server.js",
         "storybook": "start-storybook -p 6006",
@@ -79,9 +80,9 @@
     "dependencies": {
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
+        "@types/express": "^4.17.8",
         "axios": "^0.19.2",
         "css-modules-require-hook": "^4.2.3",
-        "ejs": "^3.1.5",
         "express": "^4.17.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
