upd(material ui): split webpack configs

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "license": "ISC",
     "scripts": {
         "build-storybook": "build-storybook",
-        "build-client": "webpack --config webpack.client.js --mode=development --watch",
-        "build-server": "webpack --config webpack.server.js --mode=development --watch",
-        "dev": "npm-run-all --parallel build-client build-server",
-        "prebuild": "rimraf ./build ",
+        "dev:client": "webpack --config webpack/webpack.client.js --mode=development --w",
+        "dev:server": "webpack --config webpack/webpack.server.js --mode=development --w",
+        "dev": "npm-run-all --parallel dev:client dev:server",
+        "prebuild": "rimraf ./build",
         "eslint": "eslint --cache --ext .js,.jsx,.ts,.tsx src",
         "server": "nodemon build/server.js",
         "storybook": "start-storybook -p 6006",
@@ -69,7 +69,6 @@
         "redux-mock-store": "^1.5.4",
         "sass": "^1.26.5",
         "sass-loader": "^8.0.2",
-        "style-loader": "^1.2.1",
         "ts-jest": "^26.0.0",
         "ts-loader": "^7.0.2",
         "typescript": "^3.8.3",
