--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "dev:server": "webpack --config webpack/webpack.server.js --mode=development --w",
         "dev": "npm-run-all --parallel dev:client dev:server",
         "prebuild": "rimraf ./build",
-        "lint": "eslint --cache --ext .ts,.js,.tsx,.jsx src",
+        "lint": "eslint --ext .ts,.js,.tsx,.jsx src --fix",
         "server": "nodemon build/server.js",
         "storybook": "start-storybook -p 6006",
         "test": "cross-env TS_NODE_FILES=true jest",
@@ -27,7 +27,6 @@
         "@storybook/addon-info": "^5.3.18",
         "@storybook/addon-links": "^5.3.18",
         "@storybook/addons": "^5.3.18",
-        "@storybook/react": "^5.3.18",
         "@types/classnames": "^2.2.10",
         "@types/enzyme": "^3.10.5",
         "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -45,11 +44,8 @@
         "@typescript-eslint/parser": "^2.31.0",
         "babel-jest": "^26.0.1",
         "babel-loader": "^8.1.0",
-        "classnames": "^2.2.6",
         "cross-env": "^7.0.2",
         "css-loader": "^3.5.3",
-        "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.2",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.1.0",
         "eslint-import-resolver-node": "^0.3.3",
@@ -65,7 +61,6 @@
         "nodemon": "^2.0.4",
         "npm-run-all": "^4.1.5",
         "pre-commit": "^1.2.2",
-        "redux-mock-store": "^1.5.4",
         "sass": "^1.26.5",
         "sass-loader": "^8.0.2",
         "ts-jest": "^26.0.0",
@@ -78,9 +73,13 @@
     "dependencies": {
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
+        "@storybook/react": "^5.3.18",
         "@types/express": "^4.17.8",
         "axios": "^0.19.2",
+        "classnames": "^2.2.6",
         "css-modules-require-hook": "^4.2.3",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
         "express": "^4.17.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
@@ -94,6 +93,7 @@
         "react-transition-group": "^4.4.1",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
+        "redux-mock-store": "^1.5.4",
         "redux-saga": "^1.1.3",
         "reselect": "^4.0.0",
         "rimraf": "^3.0.2",
