--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "license": "ISC",
     "scripts": {
         "build-storybook": "build-storybook",
-        "dev:client": "webpack --config webpack/webpack.client.js --mode=development --w",
-        "dev:server": "webpack --config webpack/webpack.server.js --mode=development --w",
-        "dev": "npm-run-all --parallel dev:client dev:server",
-        "prebuild": "rimraf ./build",
+        "start": "npm-run-all --parallel client:dev server:dev",
+        "client:dev": "webpack --config webpack/webpack.client.js",
+        "server:dev": "webpack --config webpack/webpack.server.js",
         "lint": "eslint --ext .ts,.js,.tsx,.jsx src --fix",
+        "lint-staged": "lint-staged",
+        "prebuild": "rimraf ./build",
         "server": "nodemon build/server.js",
         "storybook": "start-storybook -p 6006",
-        "test": "cross-env TS_NODE_FILES=true jest",
-        "lint-staged": "lint-staged"
+        "test": "cross-env TS_NODE_FILES=true jest"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
@@ -66,9 +66,8 @@
         "ts-jest": "^26.0.0",
         "ts-loader": "^7.0.2",
         "typescript": "^3.8.3",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-node-externals": "^2.5.2"
+        "webpack-node-externals": "^2.5.2",
+        "webpack": "^4.43.0"
     },
     "dependencies": {
         "@material-ui/core": "^4.11.0",
@@ -81,6 +80,9 @@
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "express": "^4.17.1",
+        "formik": "^2.2.6",
+        "http-proxy-middleware": "^1.0.6",
+        "jwt-decode": "^3.1.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-dropdown": "^1.7.0",
@@ -97,7 +99,9 @@
         "redux-saga": "^1.1.3",
         "reselect": "^4.0.0",
         "rimraf": "^3.0.2",
-        "typesafe-actions": "^5.1.0"
+        "typesafe-actions": "^5.1.0",
+        "webpack-cli": "^4.5.0",
+        "yup": "^0.32.9"
     },
     "lint-staged": {
         "*.{ts, js, tsx, jsx}": [
