--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
         "lint-staged": "lint-staged",
         "prebuild": "rimraf ./build",
         "server": "nodemon build/server.js",
-        "storybook": "start-storybook -p 6006",
-        "test": "cross-env TS_NODE_FILES=true jest"
+        "storybook": "start-storybook -p 6006"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
@@ -28,21 +27,15 @@
         "@storybook/addon-links": "^5.3.18",
         "@storybook/addons": "^5.3.18",
         "@types/classnames": "^2.2.10",
-        "@types/enzyme": "^3.10.5",
-        "@types/enzyme-adapter-react-16": "^1.0.6",
-        "@types/jest": "^25.2.3",
         "@types/react": "^16.9.34",
         "@types/react-dom": "^16.9.7",
         "@types/react-redux": "^7.1.8",
         "@types/react-redux-i18n": "0.0.11",
         "@types/react-router-dom": "^5.1.5",
-        "@types/react-test-renderer": "^16.9.2",
         "@types/react-toggle": "^4.0.2",
         "@types/react-transition-group": "^4.4.0",
-        "@types/redux-mock-store": "^1.0.2",
         "@typescript-eslint/eslint-plugin": "^2.31.0",
         "@typescript-eslint/parser": "^2.31.0",
-        "babel-jest": "^26.0.1",
         "babel-loader": "^8.1.0",
         "cross-env": "^7.0.2",
         "css-loader": "^3.5.3",
@@ -54,8 +47,6 @@
         "eslint-plugin-react": "^7.19.0",
         "eslint-plugin-react-hooks": "^2.5.0",
         "html-webpack-plugin": "^4.3.0",
-        "jest": "^26.0.1",
-        "jest-transform-stub": "^2.0.0",
         "lint-staged": "^10.5.4",
         "mini-css-extract-plugin": "^0.12.0",
         "nodemon": "^2.0.4",
@@ -63,11 +54,10 @@
         "pre-commit": "^1.2.2",
         "sass": "^1.26.5",
         "sass-loader": "^8.0.2",
-        "ts-jest": "^26.0.0",
         "ts-loader": "^7.0.2",
         "typescript": "^3.8.3",
-        "webpack-node-externals": "^2.5.2",
-        "webpack": "^4.43.0"
+        "webpack": "^4.43.0",
+        "webpack-node-externals": "^2.5.2"
     },
     "dependencies": {
         "@material-ui/core": "^4.11.0",
@@ -77,8 +67,6 @@
         "axios": "^0.19.2",
         "classnames": "^2.2.6",
         "css-modules-require-hook": "^4.2.3",
-        "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.2",
         "express": "^4.17.1",
         "formik": "^2.2.6",
         "http-proxy-middleware": "^1.0.6",
@@ -90,12 +78,10 @@
         "react-redux-i18n": "^1.9.3",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-test-renderer": "^16.13.1",
         "react-toggle": "^4.1.1",
         "react-transition-group": "^4.4.1",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
-        "redux-mock-store": "^1.5.4",
         "redux-saga": "^1.1.3",
         "reselect": "^4.0.0",
         "rimraf": "^3.0.2",
