--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "formik": "^2.2.6",
         "http-proxy-middleware": "^1.0.6",
         "jwt-decode": "^3.1.2",
+        "lodash": "^4.17.21",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-dropdown": "^1.7.0",
